--- a/blog/risk_intro/index.qmd
+++ b/blog/risk_intro/index.qmd
@@ -5,6 +5,7 @@ date: "2023-08-27"
 categories: [Management, Risk, Finance]
 description: "The official start of this page's main project: talk about financial risk management"
 image: "feature.jpg"
+doi: 10.59350/51paw-dza08
 ---
 
 ![](feature.jpg)
